# mysql-binlog-rs

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  init.sql  test.sh
examples/: insert_data.rs  live_cdc_test.rs  simple_polling.rs  test_insert.rs
src/: auth.rs  binlog.rs  binlog_client.rs  cdc_engine.rs  connection.rs  error.rs  events.rs  gtid.rs  lib.rs  main.rs  offset.rs  protocol.rs
