[package]
name = "rust_mysql"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
mysql_async = "0.33"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
regex = "1"
byteorder = "1"
md5 = "0.7"
sha1 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
